--- a/MagicMirrorWorker/MagicMirrorWorker.csproj
+++ b/MagicMirrorWorker/MagicMirrorWorker.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.25.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
   </ItemGroup>
 
 </Project>
